[tool.poetry]
name = "recipeiq"
version = "0.1.0"
description = ""
authors = ["sylvain kadjo <sylvainka12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipython = "^8.24.0"
pre-commit = "^3.7.1"


[tool.poetry.group.viz.dependencies]
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
